Bug 63547 - Cannot scroll horizontally using trackpad
Summary: Cannot scroll horizontally using trackpad
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: Other macOS (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.2.0 target:4.1.0.2 target:4.0.5
Keywords: regression
: 65886 (view as bug list)
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-04-15 09:53 UTC by Emir Sarı
Modified: 2013-06-25 06:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file from bug 63377 (373.21 KB, application/vnd.oasis.opendocument.presentation)
2013-04-15 09:53 UTC, Emir Sarı
Details
sample file 2 (13.41 KB, application/vnd.oasis.opendocument.text)
2013-06-16 13:33 UTC, Emir Sarı
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Emir Sarı 2013-04-15 09:53:50 UTC
Created attachment 77987 [details]
sample file from bug 63377

Hello, 

While testing bug 63377, I came across this problem. 

Steps to reproduce:

Open any document (e.g. see attachment)
If the horizontal scrolling bar is not visible, zoom enough to make it visible
Using the trackpad, scroll right. 
When at the end, try scrolling back to the left direction. 

Expected behaviour:

Scrolling without any obstacles

Actual behaviour:

Tilting scroll bar, document is stuck at the right border of the document, unable to scroll unless scroll bar is manually dragged with cursor.
Comment 1 Jorendc 2013-04-15 10:08:56 UTC
Hi Emir,

Thanks for your report!

I can reproduce this behavior using Mac OSX 10.8.3 with LibreOffice Version: 4.1.0.0.alpha0+ Build ID: afb3af7ce5fef803d42a549095863e6bb8210ef (own build).

I can not reproduce this behavior using LibreOffice 4.0.2.2. So I can confirm this is a regression (4.0 vs 4.1)

Seems like *VERY* related to Bug 37874 - Horizontal scrolling with touchpad in left direction goes right instead 

Kind regards,
Joren
Comment 2 Jorendc 2013-04-15 10:10:31 UTC
PS: seems like you have inverted behavior. I can not scroll back to the left. But that is related to you RTL settings I think :-)?
Comment 3 Emir Sarı 2013-04-15 10:17:09 UTC
I cannot scroll back to left either. I have Lion default inverted scrolling (iOS style). 

Well, I don't think it could be RTL related. I just disabled RTL support, and it is still reproducible.
Comment 4 Jorendc 2013-06-06 12:04:33 UTC
I can't reproduce anymore using Version: 4.1.0.0.beta2
Build ID: 33224f4f11a05cfad2249e812fcc2975fbb61f6 , due the fact I reproduced it before, and can't now I'll mark it as RESOLVED WORKSFORME. 

Tested Writer, Draw and Impress.

@Emir: you can confirm it is fixed :)?

Kind regards,
Joren
Comment 5 Emir Sarı 2013-06-06 16:52:20 UTC
@Joren, 


Confirmed. :)
Comment 6 Emir Sarı 2013-06-16 13:33:37 UTC
Created attachment 80910 [details]
sample file 2
Comment 7 Emir Sarı 2013-06-16 13:34:54 UTC
While investigating Bug 65823, I've found out that this bug is still reproducible. 

I am adding the sample file.

@Joren, could you confirm it?

Thanks in advance...
Comment 8 Don't use this account, use tml@iki.fi 2013-06-18 15:05:49 UTC
Debugging this now.
Comment 9 Emir Sarı 2013-06-18 15:23:43 UTC
*** Bug 65886 has been marked as a duplicate of this bug. ***
Comment 10 Don't use this account, use tml@iki.fi 2013-06-18 15:24:28 UTC
Fixed in master: 

commit 72703332ff42a70d19050d78a63286b9a9b6f930
Author: Tor Lillqvist <tml@iki.fi>
Date:   Tue Jun 18 18:12:09 2013 +0300

    fdo#63547: Fix wheel/trackpad scrolling on OS X: Single char copy/paste error
    
    Change-Id: I06faa28c25e976d0c9e072858cbe37093a61d38d

Cherry-pick request to 4-1 submitted to gerrit: https://gerrit.libreoffice.org/#/c/4343/
Comment 11 Commit Notification 2013-06-18 15:26:51 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=72703332ff42a70d19050d78a63286b9a9b6f930

fdo#63547: Fix wheel/trackpad scrolling on OS X: Single char copy/paste error



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Emir Sarı 2013-06-18 15:28:11 UTC
@Tor,

Thank you very much. :)

I will verify as soon as possible.
Comment 13 Commit Notification 2013-06-18 15:44:04 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=409c588c0340fdf92a8f27fd68d0ca76d699eb27&h=libreoffice-4-1

fdo#63547: Fix wheel/trackpad scrolling on OS X: Single char copy/paste error


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2013-06-25 06:15:03 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=67d28a26bc43fcf7e7455c006684d4282be5d560&h=libreoffice-4-0

fdo#63547: Fix wheel/trackpad scrolling on OS X: Single char copy/paste error


It will be available in LibreOffice 4.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.