fdo#63547: Fix wheel/trackpad scrolling on OS X: Single char copy/paste error

Change-Id: I06faa28c25e976d0c9e072858cbe37093a61d38d